# analiseAguasClaras

./: README.md  dados_extras_limpos.xlsx  pyproject.toml  requirements.txt  scraper_Final.py
dados_final/: 1200k1.xlsx  1500k1.xlsx  2200k1.xlsx  500k1.xlsx  800k1.xlsx  imoveis_1200k.xlsx  imoveis_1500k.xlsx  imoveis_2200k.xlsx  imoveis_500k.xlsx  imoveis_800k.xlsx  resumo_regressoes.xlsx  resumo_regressoesMultipla.xlsx
dados_final_completos/: imoveis_1200k.xlsx  imoveis_1500k.xlsx  imoveis_2200k.xlsx  imoveis_500k.xlsx  imoveis_800k.xlsx
